# language-tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile  deploy-template-argocd-application.yaml.example  inspect_prompt.py  main.py  pyproject.toml
curriculum/A0/: 01-greetings.json  02-introductions.json  03-courtesies.json  04-numbers-1-20.json  05-pronouns-ser.json  06-nationality-origin.json  07-ser-vs-estar.json  08-wants-essentials.json
curriculum/A1/: 01-numbers-21-100.json  02-articles-noun-gender.json  03-plurals.json  04-possessives.json  05-present-ar-verbs.json  06-present-er-ir-verbs.json  07-tener-idioms.json  08-family.json  09-hay.json  10-demonstratives.json  11-gustar.json  12-daily-routine-reflexive.json  13-telling-time.json  14-days-months-dates.json  15-common-irregulars.json  16-food-meals.json  17-restaurant.json  18-clothing-colors.json  19-weather-seasons.json  20-questions-negation.json
curriculum/A2/: 01-preterito-indefinido-ar.json  02-preterito-indefinido-er-ir.json  03-preterito-irregulars-1.json  04-preterito-irregulars-2.json  05-past-time-markers.json  06-preterito-imperfecto.json  07-indefinido-vs-imperfecto.json  08-storytelling-past.json  09-near-future.json  10-conditional.json  11-pluscuamperfecto.json  12-direct-object-pronouns.json  13-indirect-object-pronouns.json  14-combined-pronouns.json  15-reflexive-deep.json  (+10 more)
deploy/: README.md  deployment.yaml  namespace.yaml  pvc.yaml
scripts/: generate_cards.py
tests/: conftest.py  helpers.py  test_curriculum.py  test_db.py  test_srs.py  test_state_transitions.py  test_streak.py
(+30 files in other folders)
