[project]
name = "language-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.102.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
